--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <!-- Firebase Reference -->
-    <!-- <script src=""></script> -->
+  <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
 
     <!-- Moment.js Reference -->
     <!-- <script src="http://momentjs.com/downloads/moment.js"></script>  
