--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="container">
 
-        <p>Hello it's me. * Adele's Voice *</p>
+        <!-- <p>Hello it's me. * Adele's Voice *</p> -->
     
       
 <!-- Testing -->
