--- a/index.html
+++ b/index.html
@@ -134,31 +134,90 @@
       </div>
 
 
+      <!-- Searching, page 3 -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <!-- Testing -->
-      <div id="testing">
-
+      <div id="searchingRest">
+        <div class="card">
+          <div class="card-body">
+            <h2> We are searching for your buddy!</h2>
+          </div>
+        </div>
       </div>
 
 
+      <!-- Restaurant Section, page 4 -->
+      <div id="restSection">
+        <div class="card">
+          <div class="card-body">
+            <p id="restaurantP">
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Buddy Search results, page 5 -->
+
+      <div id="buddyResults">
+        <div class="card">
+          <div class="card-body">
+            <h3> We found your buddy! </h3>
+            <p> This is </p>
+            <h1> 'BOB'</h1>
+            <p>
+              "BOB" is hungry, and can't wait to meet you.
+            </p>
+            <p>
+              Here are some places you have in common:
+            </p>
+            <div class="row">
+              <div class="col-lg-12">
+                <!-- Append here -->
+                <p>Your stomach here.</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12">
+                <!-- Append here -->
+                <p>MURCAAAAAAAA</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12">
+                <!-- Append Here -->
+                <p>Pretty fly for a thai guy</p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Testing -->
+    <div id="testing">
+
+    </div>
+
+
+  </div>
   </div>
   <!-- 2 Divs close container, and Jumbotron  -->
 
