--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div id="searchingRest">
         <div class="card">
           <div class="card-body">
-            <h2> We are searching for your buddy!</h2>
+            <h2> We are searching for your food matches!</h2>
           </div>
         </div>
       </div>
@@ -150,91 +150,93 @@
         <div class="card">
           <div class="card-body">
             <p id="restaurantP">
+              <p>
+                Here are some places you have in common:
+              </p>
+              <div class="row">
+                <div class="col-lg-12">
+                  <!-- Append here -->
+                  <p>Your stomach here.</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-lg-12">
+                  <!-- Append here -->
+                  <p>MURCAAAAAAAA</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-lg-12">
+                  <!-- Append Here -->
+                  <p>Pretty fly for a thai guy</p>
             </p>
+            </div>
+            </div>
           </div>
+
+
+
+
+
+          <!-- Buddy Search results, page 5 -->
+
+          <div id="buddyResults">
+            <div class="card">
+              <div class="card-body">
+                <h3> We found your buddy! </h3>
+                <p> This is </p>
+                <div id="buddyMatch">
+                  <!-- Append your buddy name here -->
+                </div> 
+                <p>
+                  "BOB" is hungry, and can't wait to meet you.
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- Testing -->
+          <div id="testing">
+
+          </div>
+
+
         </div>
       </div>
-
-      <!-- Buddy Search results, page 5 -->
-
-      <div id="buddyResults">
-        <div class="card">
-          <div class="card-body">
-            <h3> We found your buddy! </h3>
-            <p> This is </p>
-            <h1> 'BOB'</h1>
-            <p>
-              "BOB" is hungry, and can't wait to meet you.
-            </p>
-            <p>
-              Here are some places you have in common:
-            </p>
-            <div class="row">
-              <div class="col-lg-12">
-                <!-- Append here -->
-                <p>Your stomach here.</p>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-12">
-                <!-- Append here -->
-                <p>MURCAAAAAAAA</p>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-12">
-                <!-- Append Here -->
-                <p>Pretty fly for a thai guy</p>
-              </div>
-            </div>
+      <!-- 2 Divs close container, and Jumbotron  -->
 
 
-          </div>
-        </div>
-      </div>
-    </div>
+      <!-- Sticky Bottom -->
+      <nav class="navbar fixed-bottom navbar-light bg-light">
+        <a class="navbar-brand" href="#">© Copyright FoodTroverts</a>
+      </nav>
 
 
+      <!-- JQuery -->
 
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Testing -->
-    <div id="testing">
-
-    </div>
-
-
-  </div>
-  </div>
-  <!-- 2 Divs close container, and Jumbotron  -->
-
-
-  <!-- Sticky Bottom -->
-  <nav class="navbar fixed-bottom navbar-light bg-light">
-    <a class="navbar-brand" href="#">© Copyright FoodTroverts</a>
-  </nav>
-
-
-  <!-- JQuery -->
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-
-  <!-- JavaScript -->
-  <script src="assets/javascript/app.js"></script>
+      <!-- JavaScript -->
+      <script src="assets/javascript/app.js"></script>
 
 </body>
 
