--- a/index.html
+++ b/index.html
@@ -187,12 +187,15 @@
               <div class="card-body">
                 <h3> We found your buddy! </h3>
                 <p> This is </p>
-                <div id="buddyMatch">
+                <p id="buddyMatch">
                   <!-- Append your buddy name here -->
-                </div> 
-                <p>
-                  "BOB" is hungry, and can't wait to meet you.
                 </p>
+                <p id="buddyMatch">
+                  <!-- Buddy name appended here -->
+                </p>
+                <p> is hungry, and can't wait to meet you. How would you like to connect?
+                </p>
+                
               </div>
             </div>
           </div>
