Bigger logo, small logo in nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
              <a class="navbar-brand" href="#First">
-                        <img style="max-height: 30px;" src="assets/images/logo_small.svg">
+                        <img class="logo" src="assets/images/logo.svg">
                         <!--img src="" alt="logo"-->
                     </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -40,7 +40,7 @@
                 <div class="navbar-nav">
                     </a>
                     <a class="nav-item nav-link" href="#"> About </a>
-                    <a class="nav-item nav-link" href="#"> Log-In </a>
+                    <a class="nav-item nav-link" href="#"> Get Started </a>
                 </div>
             </div>
         </nav>
@@ -49,7 +49,7 @@
     <div class="jumbotron jumbotron-fluid">
         <!-- Logo -->
         <div class="logo-image">
-            <img src="assets/images/logo.png" class="img-fluid" alt="Responsive logo image">
+            <img src="assets/images/foodtroverts_logo.svg" class="main-logo" alt="Responsive logo image">
         </div>
         <div class="container">
             <div class="arrows">
