Add hide class for cards

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <!-- Page 2 -->
-            <div class="card my-2">
+            <div class="card my-2" id="userForm">
                 <div class="card-body">
                     <!-- User Input: -->
                     <div id="gsInput">
