spelling mistakes lul

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
             </div> -->
             <!-- Restaurant Section, page 4 -->
-            <div class="card my-2 d-none" id="restuarant-list">
+            <div class="card my-2 d-none" id="restaurant-list">
                 <div class="card-body">
                     <div id="restSection">
                         <div id="restaurantP">
