Add div for restaurant info, more styling

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <div class="jumbotron jumbotron-fluid">
         <!-- Logo -->
         <div class="logo-image">
-            <img src="assets/images/foodtroverts_logo.svg" class="main-logo" alt="Responsive logo image">
+            <img src="assets/images/foodtroverts_logo_white.svg" class="main-logo" alt="Responsive logo image">
         </div>
+    </div>
         <div class="container">
             <div class="arrows">
                 <p class='arrow'>
@@ -170,19 +171,22 @@
             </div>
             <!-- Buddy Search results, page 5 -->
             <div class="card d-none" id="buddy-list">
+                <div class="card-body" id="restaurant-info">
+                </div>
                 <div class="card-body" id="buddyResults">
                 </div>
             </div>
             <!-- Testing -->
             <div id="testing">
             </div>
-        </div>
-    </div>
+</div>
     <!-- 2 Divs close container, and Jumbotron  -->
     <!-- Sticky Bottom -->
-    <nav class="navbar fixed-bottom navbar-light bg-light justify-content-center">
-        <a class="navbar-brand" href="#">© Copyright FoodTroverts</a>
-    </nav>
+    <footer>
+      <div class="container text-center footer">
+        <p>Copyright &copy; Foodtroverts 2018</p>
+      </div>
+    </footer>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- JavaScript -->
