Modals, media queries, and down button

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <a href="#aboutSection"><img src="assets/images/down-arrow.svg" class="arrow js-scroll-trigger" alt="Responsive arrows"></a>
         </div>
     </div>
-    <div class="container">
+    <div id="aboutSection" class="container">
         <!-- End of "page 1" -->
-        <div id="AboutSection" class="card my-4">
+        <div class="card my-4">
             <div class="card-body row justify-content-center">
                 <div class="col-lg-6">
                     <img src="https://source.unsplash.com/900x900/?food" class="img-fluid">
