--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                         </div>
                     </div>
                     <div class="form-row justify-content-end">
+                        <div id="submitMessage" class="col-md-9">
+                        </div>
                         <div class="form-group col-md-3">
                             <button id="submitPref" class="btn btn-light">Lets Eat!</button>
                         </div>
