Add ID to label

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="form-row justify-content-center my-3">
                         <div class="custom-file col-md-8">
                             <input type="file" class="custom-file-input upload-group" id="file">
-                            <label class="custom-file-label" for="validatedCustomFile">Upload an image!</label>
+                            <label class="custom-file-label" for="validatedCustomFile" id="fileLabel">Upload an image!</label>
                             <small id="imageNote" class="form-text text-muted">Accepted file formats: .jpg, .jpeg, .gif, .png</small>
                         </div>
                     </div>
