--- a/index.html
+++ b/index.html
@@ -22,30 +22,35 @@
 
 <body>
     <!-- Sticky NavBar -->
-    <div id="nav-bar">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">
-                        <img class="logo" src="assets/images/logo.svg">
-                        <!--img src="" alt="logo"-->
-                    </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    </a>
-                    <a class="nav-item nav-link" href="#about"> About </a>
-                    <a class="nav-item nav-link" href="#getStarted"> Get Started </a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- JumboTron(Covers Whole page, inc NavBar) -->
-    <div class="jumbotron jumbotron-fluid">
-        <div class="arrow-container">
-            <a href="#about"><img src="assets/images/down-arrow.svg" class="arrow js-scroll-trigger" alt="Responsive arrows"></a>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color:#fff">
+        <a class="navbar-brand" href="#top">
+            <img class="logo" src="assets/images/logo.svg">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto w-100 justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#getStarted">Get Started</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
         </div>
-    </div>
+    </nav>
+    <!-- JumboTron(Covers Whole page, inc NavBar) -->
+    <section id="top">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="arrow-container">
+                <a href="#about"><img src="assets/images/down-arrow.svg" class="arrow js-scroll-trigger" alt="Responsive arrows"></a>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <!-- End of "page 1" -->
         <section id="about">
