Add another section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Sticky NavBar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color:#fff">
+    <nav class="foodtronav navbar sticky-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#top">
             <img class="logo" src="assets/images/logo.svg">
         </a>
@@ -35,10 +35,10 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#getStarted">Get Started</a>
+                    <a class="nav-link" href="#howTo">How To</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#getStarted">Get Started</a>
                 </li>
             </ul>
         </div>
@@ -62,6 +62,19 @@
                     <div class="col-lg-6">
                         <h1>About Foodtroverts</h1>
                         <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="howTo">
+            <div class="card my-4">
+                <div class="card-body row justify-content-center">
+                    <div class="col-lg-6">
+                        <h1>How To</h1>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="https://source.unsplash.com/900x900/?burgers" class="img-fluid">
                     </div>
                 </div>
             </div>
