Add columns dynamically through js

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
         <div class="card d-none" id="buddy-list">
             <div class="card-body" id="restaurant-info">
             </div>
-            <div class="card-body" id="buddyResults">
+            <div class="row justify-content-center" id="buddyHeader">
+            </div>
+            <div class="card-body row justify-content-center" id="buddyResults">
             </div>
         </div>
     </div>
