--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
                             [In app messaging coming soon!]
                         </p>
                         <p>
-                            Have fun! Wishing you many more - new friends and happy meals! 
-                                -Foodtroverts, your fellow foodies.
+                            Have fun! Wishing you many more - new friends and happy meals! -Foodtroverts, your fellow foodies.
                         </p>
 
                     </div>
@@ -122,43 +121,62 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active row justify-content-center">
                                 <div class="col-lg-12">
-                                    <p>“	I went from eating alone at the local deli every lunch, 
-                                        to hanging out with Becky (with the good hair) down at Tweeter HQ.
-                                         We live tweet all our meals now #LivingMyBestLife #WishYouWereHere     "
-
-                                            - Karen, Pottery Yarn 
-                                </p>
-                                </div>
-                            </div>
-                            <div class="carousel-item row justify-content-center">
-                                <div class="col-lg-12">
-                                    <p>“	My husband and I have been married for 15 years - 
-                                        the conversation has become a bit dry to say the least. 
-                                        I’m so happy Foodtrovert exists, now we both have our nights to eat wherever we want and have some fresh company.
-                                         It’s really revived our relationship! Thanks for the great experiences.    "
-                                        <br>
-                                            - Linda, From HR </p>
-                                </div>
-                            </div>
-                            <div class="carousel-item row justify-content-center">
-                                <div class="col-lg-12">
-                                    <p>“	After being at my fraternity, i was tired of dive bar burgers and instant ramen. 
-                                        Foodtrovert helped me expand my food palate, while meeting new people and dining at upscale restaurants. 
-                                        Now I finally know acceptable restaurants to bring a date to, and what foie gras is.  "
-                                        <br>
+                                    <div class="reviews">
+                                        <p>“ I went from eating alone at the local deli every lunch, to hanging out with Becky
+                                            (with the good hair) down at Tweeter HQ. We live tweet all our meals now #LivingMyBestLife
+                                            #WishYouWereHere " 
+                                        </p>
                                         <p>
-                                            —	Todd, from Phi Kappa Phi</p>
+                                            - Karen, Pottery Yarn
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="carousel-item row justify-content-center">
-                                    <div class="col-lg-12">
-                                        <p>“    For the past 3 years me and Spencer have been passing by one another, oblivious to each others existence despite being 4 cubicles away from one another. I downloaded Foodtroverts to find a buddy during lunch hours - unexpectedly matching with Spencer. Wow. We have been inseparable ever since and are officially announcing our engagement next month. I know the app says ‘We came for the food’, but I just happened to find some romance too.  "
-                                            <br>
+                                <div class="col-lg-12">
+                                    <div class="reviews">
+                                        <p>“ My husband and I have been married for 15 years - the conversation has become a
+                                            bit dry to say the least. I’m so happy Foodtroverts exists, now we both have our
+                                            nights to eat wherever we want and have some fresh company. It’s really revived
+                                            our relationship! Thanks for the great experiences. " 
+                                            </p>
                                             <p>
-                                                -	Stanley, From Accounting 
+                                            - Linda, From HR
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item row justify-content-center">
+                                <div class="col-lg-12">
+                                    <div class="reviews">
+                                        <p>“ After being at my fraternity, I was tired of dive bar burgers and instant ramen.
+                                            Foodtroverts helped me expand my food palate, while meeting new people and dining
+                                            at upscale restaurants. Now I finally know acceptable places to bring a
+                                            date to, oh...and what foie gras is. " 
+                                        </p>
+                                            <p> 
+                                                    — Todd, from Phi Kappa Phi
+                                            
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item row justify-content-center">
+                                <div class="col-lg-12">
+                                    <div class="reviews">
+                                        <p>“ For the past 3 years me and Spencer have been passing by one another, oblivious
+                                            to each others existence despite being 4 cubicles away from one another. I downloaded
+                                            Foodtroverts to find a buddy during lunch hours - unexpectedly matching with
+                                            Spencer. Wow. We have been inseparable ever since and are officially announcing
+                                            our engagement next month. I know the app says ‘We came for the food’, but I
+                                            just happened to find some romance too. "
+                                            </p>
+                                            <p>
+                                                - Stanley, From Accounting
                                             </p>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                         <!--                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
